--- a/5.23-lx/5.23-lx.csproj
+++ b/5.23-lx/5.23-lx.csproj
@@ -43,8 +43,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Circle.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Animal.cs" />
+    <Compile Include="Rectangular.cs" />
+    <Compile Include="Shape.cs" />
+    <Compile Include="Squarecs.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
