--- a/this关键字/this关键字.csproj
+++ b/this关键字/this关键字.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{8E9E7881-5BAC-4A47-9E1D-2E8AE3A8881D}</ProjectGuid>
+    <ProjectGuid>{58D5F4C7-E96F-4BC6-8404-20ACCE2E7111}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>_5._23_lx</RootNamespace>
-    <AssemblyName>5.23-lx</AssemblyName>
+    <RootNamespace>this关键字</RootNamespace>
+    <AssemblyName>this关键字</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -43,16 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Child.cs" />
-    <Compile Include="Circle.cs" />
-    <Compile Include="Parent.cs" />
-    <Compile Include="Person.cs" />
+    <Compile Include="ChangeScore.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Animal.cs" />
-    <Compile Include="Rectangular.cs" />
-    <Compile Include="Shape.cs" />
-    <Compile Include="Squarecs.cs" />
     <Compile Include="Student.cs" />
   </ItemGroup>
   <ItemGroup>
