--- a/this关键字/this关键字.csproj
+++ b/this关键字/this关键字.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ChangeScore.cs" />
+    <Compile Include="NewStudent.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Student.cs" />
